<resources>
    <string name="app_name">ProyectoAS</string>
    <string name="login">Login</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="register">Register</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="turismo_de_guate">turismo de guate</string>
    <string name="ingrdatos">Ingrese sus datos</string>
    <string name="apellido">Apellido</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="telefono">telefono</string>
    <string name="texto_aleatorio">texto aleatorio</string>
    <string name="imagenturistico">imagenturistico</string>
    <string name="imagenrestaurantistico">imagenrestaurantistico</string>
    <string name="lugares_tur_sticos">Lugares turísticos</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="imagenrestaurantes">imagenrestaurantes</string>
    <string name="registre_sus_datos">Registre sus datos</string>
    <string name="nombre_del_restaurante">nombre_del_restaurante</string>
    <string name="departamento">departamento</string>
    <string name="lugares_cerca">Lugares_cerca</string>
    <string name="datos_del_perfil">datos_del_perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_del_perfil">Nombre del perfil</string>
    <string name="contrase_a">Contraseña</string>
    <string name="telefono_de_perfil">Telefono de perfil</string>
    <string name="correo_de_perfil">Correo de perfil</string>
    <string name="apellido_de_perfil">Apellido de perfil</string>
    <string name="nombre_de_perfil">Nombre de perfil</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="confirmar_contra">Confirmar contra</string>
    <string name="editar">Editar</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="tu_perfil">Tu perfil</string>
    <string name="comentario_de_usuario">comentario de usuario</string>
    <string name="nombre_de_usuario">nombre de usuario</string>
    <string name="fecha">fecha</string>
    <string name="kilometr">kilometr</string>
    <string name="kilometros_de_distancia">Kilometros de distancia:</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="confirmar_nueva_contrase_a">Confirmar nueva contraseña</string>
    <string name="no_tiene_rating">No tiene rating</string>
</resources>