<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@color/white"
    android:layout_margin="15dp"
    >

    <TextView
        android:id="@+id/nombreus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25sp"
        android:text="@string/nombre_de_usuario"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageButton
        android:id="@+id/trash"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="5dp"
        android:background="@drawable/ic_baseline_delete_24"
        />
    <TextView
        android:id="@+id/comentarious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:text="@string/comentario_de_usuario"
        app:layout_constraintTop_toBottomOf="@+id/nombreus"/>
    <TextView
        android:id="@+id/sinrating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25sp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/ratingp"
        android:text="@string/no_tiene_rating"
        />
    <RatingBar
        android:id="@+id/ratingp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/comentarious"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>