<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/teal_700"
    tools:context=".Fragments.ProfileFragment">
    <TextView
        android:id="@+id/nperfil"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:text="@string/tu_perfil"
        android:textSize="30sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="#013E3E">

        <ImageButton
            android:id="@+id/cerrar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_baseline_exit_to_app_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:text="@string/cerrar_sesi_n"/>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iconoperfil"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nperfil"
        android:background="@drawable/ic_baseline_person_pin_24"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardBackgroundColor="#016C6C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconoperfil">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrpar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <EditText
                android:id="@+id/nombreperfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/correoperfil"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/nombre"/>
            <EditText
                android:id="@+id/apellidoperfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/nombreperfil"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/apellido"/>
            <TextView
                android:id="@+id/correoperfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/constrpar"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/correo"/>
            <EditText
                android:id="@+id/telefonoperfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/apellidoperfil"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/telefono"
                android:inputType="number" />
            <TextView
                android:id="@+id/nombreperfilplano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/correoperfil"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:layout_marginStart="40dp"
                android:textSize="20sp"
                android:text="Nombre"/>
            <TextView
                android:id="@+id/apellidoperfilplano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/nombreperfil"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="Apellido"/>
            <TextView
                android:id="@+id/correoperfilplano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/constrpar"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:layout_marginStart="40dp"
                android:textColor="@color/white"
                android:text="Correo"/>
            <TextView
                android:id="@+id/telefonoperfilplano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/apellidoperfil"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:layout_marginStart="40dp"
                android:text="Teléfono"/>

            <Button
                android:id="@+id/editarperf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/telefonoperfilplano"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"
                android:text="@string/editar"/>
            <Button
                android:id="@+id/editarcontra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/telefonoperfil"
                app:layout_constraintStart_toEndOf="@+id/editarperf"
                android:layout_marginStart="60dp"
                android:layout_marginTop="25dp"
                android:text="contraseña"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>